# arrayfire

./: CMakeLists.txt
.github/workflows/: release_src_artifact.yml
CMakeModules/: CPackConfig.cmake  Version.cmake  boost_package.cmake
CMakeModules/osx_install/: OSXInstaller.cmake
src/api/unified/: CMakeLists.txt
src/backend/cpu/: CMakeLists.txt
src/backend/cuda/: CMakeLists.txt
src/backend/opencl/: CMakeLists.txt
test/: CMakeLists.txt
